--- a/docs-2.0-zh/3.ngql-guide/6.functions-and-expressions/1.math.md
+++ b/docs-2.0-zh/3.ngql-guide/6.functions-and-expressions/1.math.md
@@ -76,12 +76,19 @@ nebula> RETURN ceil(9.1);
 
 round() 返回指定数字四舍五入后的值。极端情况下请注意浮点数的精度问题。
 
-语法：`round(<expression>, <digit>)`
+语法：`round(<expression>, <precision>, <mode>)`
 
 - `expression`：结果的数据类型为 double 的表达式。
 
-- `digit`：小数位数。小于 0 时 ，在小数点左侧做四舍五入。数据类型为 int。
+- `precision`：代表精度的整数。小于 0 时 ，在小数点左侧做四舍五入。
 
+- `mode`：代表舍入模式的字符串。可选参数。可选值如下：
+  - `DOWN`：向零舍入。
+  - `CEILING`：向正无穷舍入。
+  - `FLOOR`：向负无穷舍入。
+  - `HALF_UP`：基于精度向最接近的值舍入，如果最接近的值有两个，则取远离零的值。
+  - `HALF_DOWN`：基于精度向最接近的值舍入，如果最接近的值有两个，则取靠近零的值。
+  - `HALF_EVEN`：基于精度向最接近的值舍入，如果最接近的值有两个，则取最接近的偶数值。
 - 返回类型：double。
 
 示例：
@@ -100,6 +107,48 @@ nebula> RETURN round(314.15926, -1);
 +-----------------------+
 | 310.0                 |
 +-----------------------+
+
+nebula> RETURN round(314.15926, 2, "DOWN");
++---------------------------+
+| round(314.15926,2,"DOWN") |
++---------------------------+
+| 314.15                    |
++---------------------------+
+
+nebula> RETURN round(314.15926, 2, "CEILING");
++------------------------------+
+| round(314.15926,2,"CEILING") |
++------------------------------+
+| 314.16                       |
++------------------------------+
+
+nebula> RETURN round(314.15926, 2, "FLOOR");
++----------------------------+
+| round(314.15926,2,"FLOOR") |
++----------------------------+
+| 314.15                     |
++----------------------------+
+
+nebula> RETURN round(314.15926, 2, "HALF_UP");
++------------------------------+
+| round(314.15926,1,"HALF_UP") |
++------------------------------+
+| 314.2                        |
++------------------------------+
+
+nebula> RETURN round(314.15926, 2, "HALF_DOWN");
++--------------------------------+
+| round(314.15926,1,"HALF_DOWN") |
++--------------------------------+
+| 314.1                          |
++--------------------------------+
+
+nebula> RETURN round(314.15926, 2, "HALF_EVEN");    
++--------------------------------+
+| round(314.15926,1,"HALF_EVEN") |
++--------------------------------+
+| 314.2                          |
++--------------------------------+
 ```
 
 ## sqrt()
