--- a/docs-2.0-en/3.ngql-guide/6.functions-and-expressions/1.math.md
+++ b/docs-2.0-en/3.ngql-guide/6.functions-and-expressions/1.math.md
@@ -79,9 +79,9 @@ Syntax: `round(<expression>, <precision>, <mode>)`
 
 - `expression`: An expression of which the result type is double.
 
-- `precision`: Decimal digits. If `precision` is less than 0, round at the left of the decimal point.
+- `precision`: An integer specifying the precision. If `precision` is less than 0, round at the left of the decimal point.
 
-- `mode`: A string specifying the rounding mode. The following valid values are supported:
+- `mode`: A string specifying the rounding mode. Optional. The following valid values are supported:
   - `DOWN`: Round towards zero.
   - `CEILING`: Round towards positive infinity.
   - `FLOOR`: Round towards negative infinity.
@@ -99,30 +99,56 @@ nebula> RETURN round(314.15926, 2);
 +--------------------+
 | 314.16             |
 +--------------------+
+
 nebula> RETURN round(314.15926, -1);
 +-----------------------+
 | round(314.15926,-(1)) |
 +-----------------------+
 | 310.0                 |
 +-----------------------+
+
 nebula> RETURN round(314.15926, 2, "DOWN");
 +---------------------------+
 | round(314.15926,2,"DOWN") |
 +---------------------------+
 | 314.15                    |
 +---------------------------+
+
 nebula> RETURN round(314.15926, 2, "CEILING");
 +------------------------------+
 | round(314.15926,2,"CEILING") |
 +------------------------------+
 | 314.16                       |
 +------------------------------+
+
 nebula> RETURN round(314.15926, 2, "FLOOR");
 +----------------------------+
 | round(314.15926,2,"FLOOR") |
 +----------------------------+
 | 314.15                     |
 +----------------------------+
+
+nebula> RETURN round(314.15926, 2, "HALF_UP");
++------------------------------+
+| round(314.15926,1,"HALF_UP") |
++------------------------------+
+| 314.2                        |
++------------------------------+
+
+nebula> RETURN round(314.15926, 2, "HALF_DOWN");
++--------------------------------+
+| round(314.15926,1,"HALF_DOWN") |
++--------------------------------+
+| 314.1                          |
++--------------------------------+
+
+nebula> RETURN round(314.15926, 2, "HALF_EVEN");    
++--------------------------------+
+| round(314.15926,1,"HALF_EVEN") |
++--------------------------------+
+| 314.2                          |
++--------------------------------+
+
 
 ```
 
